--- a/index.Rmd
+++ b/index.Rmd
@@ -40,8 +40,8 @@ sheet_is_publicly_readable <- TRUE
 PDF_EXPORT <- FALSE
 
 
-CV_PDF_LOC <- "https://github.com/andpir55/CV/raw/master/AndrePirralhaCV.pdf"
-CV_HTML_LOC <- "andrepirralha.com/cv/"
+CV_PDF_LOC <- "<https://github.com/andpir55/CV/blob/master/AndrePirralhaCV.pdf>"
+CV_HTML_LOC <- "<https://andrepirralha.com/>"
 
 
 # A global (gasp) variable that holds all the links that were inserted for
@@ -108,7 +108,7 @@ build_skill_bars(skills)
 
   
   
-  Languages {#languages}
+Languages {#languages}
 --------------------------------------------------------------------------------
 
 ```{r}
@@ -136,6 +136,13 @@ print_text_block(text_blocks, 'intro')
 ```
 
 
+Work Experience {data-icon=laptop}
+--------------------------------------------------------------------------------
+
+```{r}
+print_section(position_data, 'research_positions')
+```
+
 
 Education {data-icon=graduation-cap data-concise=true}
 --------------------------------------------------------------------------------
@@ -146,12 +153,6 @@ print_section(position_data, 'education')
 
 
 
-Research Experience {data-icon=laptop}
---------------------------------------------------------------------------------
-
-```{r}
-print_section(position_data, 'research_positions')
-```
 
 Publications {data-icon=book}
 --------------------------------------------------------------------------------
