--- a/index.Rmd
+++ b/index.Rmd
@@ -40,7 +40,7 @@ sheet_is_publicly_readable <- TRUE
 PDF_EXPORT <- FALSE
 
 
-CV_PDF_LOC <- "<https://github.com/andpir55/CV/blob/master/AndrePirralhaCV.pdf>"
+CV_PDF_LOC <- "https://github.com/andpir55/CV/raw/master/AndrePirralhaCV.pdf"
 CV_HTML_LOC <- "<https://andrepirralha.com/>"
 
 
